--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   background-repeat: no-repeat;
   filter: blur(8px);
    z-index: -1;
-  background-image:linear-gradient(rgb(0 0 255 / 0.5), rgb(255 255 0 / 0.5)), url("https://images.unsplash.com/photo-1612208695882-02f2322b7fee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y29sZCUyMHdlYXRoZXJ8ZW58MHx8MHx8fDA%3D");
+  background-image: url("https://images.unsplash.com/photo-1612208695882-02f2322b7fee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y29sZCUyMHdlYXRoZXJ8ZW58MHx8MHx8fDA%3D");
    
 }
 #rain::before{
